Fix buttons such that they are right-aligned

--- a/src/api/overlays/components/overlay-component.scss
+++ b/src/api/overlays/components/overlay-component.scss
@@ -87,7 +87,8 @@
     justify-content: flex-end;
     margin-top: $interiorMargin;
     body.mobile & {
-      justify-content: center;
+      justify-content: flex-end;
+      padding-right: $interiorMargin;
     }
 
     > * + * {
